syntax = "proto3";

package manga;

option go_package = "./pkg/pb";

service MangaService {
  rpc CreateManga(CreateMangaRequest) returns (CreateMangaResponse);
  rpc GetManga(GetMangaRequest) returns (GetMangaResponse);
  rpc ListManga(ListMangaRequest) returns (ListMangaResponse);
  rpc UpdateManga(UpdateMangaRequest) returns (UpdateMangaResponse);
  rpc DeleteManga(DeleteMangaRequest) returns (DeleteMangaResponse);
}

message Manga {
    int64 id = 1;             
    string name = 2;          
    string author = 3;       
    string published_date = 4; 
    string genre = 5;         
    double price = 6;        
    int64 stock = 7;         
    string description = 8; 
    double rating = 9;     
}

message GetMangaRequest {
    int64 id = 1;
}

message GetMangaResponse {
    int64 status = 1;
    Manga manga = 2;
    string error = 3;
} 

message ListMangaRequest {
    string genre = 1;       
    string author = 2;     
}

message ListMangaResponse {
    int64 status = 1;
    repeated Manga manga = 2;
    string error = 3;
}

message CreateMangaRequest {
    Manga manga = 1;
}

message CreateMangaResponse {
    int64 status = 1;
    Manga manga = 2;
    string error = 3;
}

message UpdateMangaRequest {
    Manga manga = 1;
}

message UpdateMangaResponse {
    int64 status = 1;
    Manga manga = 2;
    string error = 3;
}

message DeleteMangaRequest {
    int64 id = 1;
}

message DeleteMangaResponse {
    int64 status = 1;
    bool success = 2;
    string error = 3;
}

